# benchling-api

./: .flake8  .gitignore  .pre-commit-config.yaml  .spyderworkspace  .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  Pipfile  README  README.md  README.rst  benchlingapitester.py  frag4256.ape  frag4256.gb  frag4257.ape  frag4257.gb  fragment-4256-pgadt7rec_ts-amp_split.gb  fragment-4257-pgadt7rec_pp2_amp_split.gb  gibsonresult.gb  plasmid.gb  pyproject.toml  requirements-dev.txt  requirements.txt  runner.py  setup.py  test.py  tox.ini
.github/workflows/: pythonapp.yml
.keats/: changelog.json  changelog.md
archive/: benchlingportal.py  convert.py.bak  test_alignments.py
benchlingapi/: __init__.py  __version__.py  base.py  benchlingapi.py  benchlingapi.py.bak  benchlingportal.py  convert.py  exceptions.py  http.py  interface.py  models.py  schema.py  schemas.py  session.py  utils.py
benchlingapi/_version/: __init__.py  version.json
benchlingapi/models/: __init__.py  base.py  mixins.py  models.py  schema.py
benchlingportal/: __init__.py  benchlingportal.py
docs/: .buildinfo  exceptions.html  genindex.html  guidelines.html  index.html  models.html  objects.inv  overview.html  py-modindex.html  quickstart.html  search.html  searchindex.js  session.html  usage.html  utils.html
docs/.doctrees/: environment.pickle  exceptions.doctree  guidelines.doctree  index.doctree  models.doctree  overview.doctree  quickstart.doctree  session.doctree  usage.doctree  utils.doctree
docs/_modules/: index.html
docs/_sources/: exceptions.rst  guidelines.rst  index.rst  index.rst.txt  models.rst  quickstart.rst.txt  session.rst  usage.rst
docs/_static/: documentation_options.js
docs/developer/: api_reference.html  changelog.html
docs/doctest/: output.txt
docs/doctrees/: environment.pickle  exceptions.doctree  index.doctree  models.doctree  usage.doctree  utils.doctree
docsrc/: Makefile  conf.py  guidelines.rst  index.rst  make.bat  overview.rst  quickstart.rst  usage.rst  utils.rst
docsrc/_templates/: sidebar.html
docsrc/developer/: changelog.md
docsrc/source/: conf.py  index.rst
tests/: conftest.py  test_alignment.py  test_alignments.py  test_benchling_api.py  test_interface.py  test_main.py  test_session.py
tests/example_outputs/: example_folder.json  example_sequence.json
tests/secrets/: config.json  config.json.enc  config_fake.json
tests/test_data/: B0015_DG___SampleID-17872_ItemID-88381_PrimerID-16756-PrimerName-DVA_seq_F.ab1  B0015_DG___SampleID-17872_ItemID-88381_PrimerID-16757-PrimerName-DVA_seq_R.ab1
tests/test_models/: test_aa_sequence.py  test_all_models.py  test_dna_sequence.py  (+7 more)
(+112 files in other folders)
