[tool.poetry]
name = "benchlingapi"
version = "2.0.1a"
description = "An unofficial python wrapper for the Benchling API"
authors = ["Justin Vrana <justin.vrana@gmail.com>"]
homepage = "https://www.github.com/klavinslab/benchlingapi"
repository = "https://www.github.com/klavinslab/benchlngapi"
documentation = "https://www.github.com/klavinslab/benchlingapi"
readme = 'README.md'

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
inflection = "^0.3.1"
urlopen = "^1.0"
marshmallow = "=3.0.0rc1"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest = "^5.0"
pre-commit = "^1.17"
toml = "^0.10.0"
sphinx = "^2.1"
guzzle-sphinx-theme = "^0.7.11"
vcrpy = "^2.0"

[tool.poetry.scripts]
upver = 'benchlingapi:_version.pull_version'
version = 'benchlingapi:_version.get_version'
name = 'benchlingapi:_version.get_name'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
